vlib/v/checker/tests/comptime_field_selector_not_in_for_err.out
vlib/v/checker/tests/comptime_field_selector_not_in_for_err.vv:9:6: error: expected selector expression e.g. `$(field.name)`
    7 |     mut t := T{}
    8 |     name := 'test'
    9 |     t.$(name) = '3'
      |         ~~~~
   10 | }
   11 |
vlib/v/checker/tests/comptime_field_selector_not_in_for_err.vv:9:14: error: cannot assign to `t.$(name)`: expected `void`, not `string`
    7 |     mut t := T{}
    8 |     name := 'test'
    9 |     t.$(name) = '3'
      |                 ~~~
   10 | }
   11 |
